The card hotbar can no longer overlap the sidebar.

--- a/src/cardhotbar/css/card-hotbar.css
+++ b/src/cardhotbar/css/card-hotbar.css
@@ -6,8 +6,6 @@
     position: fixed;
     bottom: 63px;
     left: 220px;
-    min-width: 100%;
-    max-width: 100%;
     height: 200px;
     box-sizing: border-box;
 }
@@ -57,6 +55,7 @@
 #card-hotbar #card-action-bar {
     pointer-events: all;
     height: 100%;
+    width: calc(100vw - 600px);
 }
 
 #card-hotbar .bar-controls {
@@ -77,7 +76,7 @@
 
 #card-hotbar #card-macro-list {
     flex-wrap: nowrap;
-    flex: 0 0 1200px;
+    flex: 0 0 100%;
     height: 100%;
     list-style: none;
     margin: 2px;
